accept button working

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -38,7 +38,7 @@
                   </div>
                   <p>from <%= Booking.find(booking_id).start_time.strftime("%d/%m/%Y") %> to <%= Booking.find(booking_id).start_time.strftime("%d/%m/%Y") %></p>
                   <div class="d-flex justify-content-end">
-                    <button class="btn btn-success btn-sm mr-3">Accept</button>
+                    <%= link_to "Accept", booking_accept_path(booking_id), class: "btn btn-success btn-sm mr-3" %>
                     <%= link_to "Decline", booking_path(booking_id), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger btn-sm" %>
                   </div>
                 </div>
