changed rem in payment on search

--- a/app/views/shared/_search_bar.html.erb
+++ b/app/views/shared/_search_bar.html.erb
@@ -20,7 +20,7 @@
       </div>
       <div class="col-2 d-flex justify-content-center align-items-center">
           <i class="fas fa-money-bill-wave light-grey"></i>
-          <input type="text" class="form-control no-border" placeholder="Remuneration">
+          <input type="text" class="form-control no-border" placeholder="Payment">
       </div>
       <div class="col-1 d-flex justify-content-end align-items-center">
         <%= link_to conveyings_path do %>
