--- a/app/views/conveyings/show.html.erb
+++ b/app/views/conveyings/show.html.erb
@@ -38,14 +38,15 @@
     <div class="col-8 pl-0">
         <!-- <h2><%=  @conveying.boat_name %></h2> -->
 
-      <div class="border-bottom">
 <!--    ATTENTION si on utilise current_user > on ne peut accéder à la show que quand on est log -->
 <!--    <p style="font-size:12px;"><%#= current_user.first_name %> is the owner of this boat</p> -->
         <h6><%= @conveying.user.first_name %> is the owner of this boat</h6>
-        <h6 style= "padding: 8px;"><%= @conveying.user.rating %> <i class="fas fa-star"></i></h6>
-      </div>
+        <div class="d-flex align-items-center mb-2 ">
+          <%= cl_image_tag @conveying.user.photo.key, class: "avatar-bordered"%>
+          <h6 style= "padding: 8px;"><%= @conveying.user.rating %> <i class="fas fa-star"></i></h6>
+        </div>
 
-      <div class="d-flex align-items-center">
+      <div class="d-flex align-items-center border-top">
         <i class="fas fa-ship pr-3 mt-3" style="color:light-grey;"></i>
         <p class="mb-0 mt-3"> <%=  @conveying.boat_type %></p>
       </div>
