--- a/app/views/conveyings/show.html.erb
+++ b/app/views/conveyings/show.html.erb
@@ -43,7 +43,7 @@
         <h6><%= @conveying.user.first_name %> is the owner of this boat</h6>
         <div class="d-flex align-items-center mb-2 ">
           <%= cl_image_tag @conveying.user.photo.key, class: "avatar-bordered"%>
-          <h6 style= "padding: 8px;"><%= @conveying.user.rating %> <i class="fas fa-star"></i></h6>
+          <h6 style= "padding: 8px; margin:0;"><%= @conveying.user.rating %> <i class="fas fa-star"></i></h6>
         </div>
 
       <div class="d-flex align-items-center border-top">
