--- a/app/views/conveyings/new.html.erb
+++ b/app/views/conveyings/new.html.erb
@@ -1,39 +1,41 @@
-<div class="container pt-5 col-6">
-  <h1 class="text-center mb-5">Create a new conveying</h1>
+<div class="content-wrapper">
+  <div class="container pt-5 col-6">
+    <h1 class="text-center mb-5">Create a new conveying</h1>
 
-  <%= simple_form_for @conveying do |f| %>
-  <div class="form-row">
-      <div class="col-3 form-group">
-        <%= f.input :boat_name, :placeholder => "Black Pearl" %>
-      </div>
-      <div class="col-3 form-group">
-        <%= f.input :boat_type, collection: Conveying::BOATTYPES %>
-      </div>
-      <div class="col-3 form-group">
-        <%= f.input :capacity, collection: Conveying::CAPACITIES%>
-      </div>
-      <div class="col-3 form-group">
-        <%= f.input :price, input_html: { min: 0 }, label: 'Price (€)'%>
-      </div>
-    </div>
+    <%= simple_form_for @conveying do |f| %>
     <div class="form-row">
-      <div class="col-6 form-group">
-    <%= f.input :start_location, :placeholder => "Cannes"%>
+        <div class="col-3 form-group">
+          <%= f.input :boat_name, :placeholder => "Black Pearl" %>
+        </div>
+        <div class="col-3 form-group">
+          <%= f.input :boat_type, collection: Conveying::BOATTYPES %>
+        </div>
+        <div class="col-3 form-group">
+          <%= f.input :capacity, collection: Conveying::CAPACITIES%>
+        </div>
+        <div class="col-3 form-group">
+          <%= f.input :price, input_html: { min: 0 }, label: 'Price (€)'%>
+        </div>
       </div>
-      <div class="col-6 form-group">
-    <%= f.input :arrival_location, :placeholder => "Gênes"%>
+      <div class="form-row">
+        <div class="col-6 form-group">
+      <%= f.input :start_location, :placeholder => "Cannes"%>
+        </div>
+        <div class="col-6 form-group">
+      <%= f.input :arrival_location, :placeholder => "Gênes"%>
+        </div>
       </div>
-    </div>
-    <div class="form-row">
-      <div class="col-6 form-group">
-        <%= f.input :start_date, label: 'Available from:', as: :string, required: false, input_html: { class: "datepicker"}%>
+      <div class="form-row">
+        <div class="col-6 form-group">
+          <%= f.input :start_date, label: 'Available from:', as: :string, required: false, input_html: { class: "datepicker"}%>
+        </div>
+        <div class="col-6 form-group">
+          <%= f.input :arrival_date, as: :string, label: 'Need to arrive before:', required: false, input_html: { class: "datepicker"} %>
+        </div>
       </div>
-      <div class="col-6 form-group">
-        <%= f.input :arrival_date, as: :string, label: 'Need to arrive before:', required: false, input_html: { class: "datepicker"} %>
-      </div>
-    </div>
-    <%= f.input :photos, as: :file, input_html: { multiple: true, id: 'photo-input' } %>
-    <%= image_tag "", width: 300, class: "hidden", id: "photo-preview" %>
-    <%= f.button :submit, "Create", :class => "btn btn-primary w-100" %>
-  <% end %>
+      <%= f.input :photos, as: :file, input_html: { multiple: true, id: 'photo-input' } %>
+      <%= image_tag "", width: 300, class: "hidden", id: "photo-preview" %>
+      <%= f.button :submit, "Create", :class => "btn btn-primary w-100" %>
+    <% end %>
+  </div>
 </div>
