--- a/app/views/conveyings/show.html.erb
+++ b/app/views/conveyings/show.html.erb
@@ -1,98 +1,99 @@
-<div class="container">
+<div class="content-wraper">
+  <div class="container">
 
-  <!-- TITLE -->
-  <div class="row">
-    <div class="col-sm-10 nopadding">
-      <h1><%=  @conveying.boat_name %></h1>
-    </div>
-    <div class="col-sm-2 nopadding text-right">
-      <%= link_to 'edit conveying', edit_conveying_path, class: "btn btn-primary m-0" %>
-    </div>
-  </div>
-
-  <!-- FIRST ROW in mokup -->
-  <div class="row">
-    <div class="col-sm-10 nopadding">
-      <p>Conveying from : <%= @conveying.start_location%></p>
-    </div>
-    <div class="d-flex col-sm-1">
-      <i class="fas fa-heart light-grey p-1"></i>
-      <p>Save</p>
-    </div>
-    <div class="d-flex col-sm-1 nopadding justify-content-end">
-      <i class="far fa-share-square light-grey p-1"></i>
-      <p>share</p>
-    </div>
-  </div>
-
-  <!--   SECOND ROW in mockup (conveying pictures) -->
-  <div class="row rounded boat-image-parent ">
-      <%= cl_image_tag @conveying.photos.first.key, class: "boat-image-child-one"%>
-      <%  @conveying.photos.each do |photo|%>
-        <%= cl_image_tag photo.key, class: "boat-image-child-two"%>
-      <% end %>
-  </div>
-
-  <!--   THIRD ROW @ 2 cols in mockup (boat+owner info + map | calendar) -->
-  <div class="row mt-3">
-    <div class="col-8 pl-0">
-        <!-- <h2><%=  @conveying.boat_name %></h2> -->
-
-      <div class="border-bottom">
-<!--    ATTENTION si on utilise current_user > on ne peut accéder à la show que quand on est log -->
-<!--    <p style="font-size:12px;"><%#= current_user.first_name %> is the owner of this boat</p> -->
-        <h6><%= @conveying.user.first_name %> is the owner of this boat</h6>
-        <h6 style= "padding: 8px;"><%= @conveying.user.rating %> <i class="fas fa-star"></i></h6>
+    <!-- TITLE -->
+    <div class="row">
+      <div class="col-sm-10 nopadding">
+        <h1><%=  @conveying.boat_name %></h1>
       </div>
-
-      <div class="d-flex align-items-center">
-        <i class="fas fa-ship pr-3 mt-3" style="color:light-grey;"></i>
-        <p class="mb-0 mt-3"> <%=  @conveying.boat_type %></p>
+      <div class="col-sm-2 nopadding text-right">
+        <%= link_to 'edit conveying', edit_conveying_path, class: "btn btn-primary m-0" %>
       </div>
-
-      <div class="d-flex align-items-center">
-        <i class="fas fa-map-marked-alt pr-3 mt-3" style="color:light-grey;"></i>
-        <p class="mb-0 mt-3"> From <%= @conveying.start_location %> | To <%= @conveying.arrival_location %></p>
-      </div>
-
-      <div class="d-flex align-items-center">
-        <i class="far fa-calendar-check pr-3 mt-3" style="color:light-grey;"></i>
-        <p class="mb-0 mt-3"> Conveying due on: <%= @conveying.arrival_date.strftime("%B %d, %Y") %></p> </div>
-
-      <div class="d-flex align-items-center">
-        <i class="fas fa-user-tie pr-3 mt-3" style="color:light-grey;"></i>
-        <p class="mb-0 mt-3"> Capacity : <%= @conveying.capacity %></p>
-      </div>
-
-      <div class="d-flex align-items-center border-bottom pb-3">
-        <i class="fas fa-money-bill-wave pr-3 mt-3" style="color:light-grey;"></i>
-        <p class="mb-0 mt-3"> Payment : <%= @conveying.price %>€</p>
-      </div>
-
-      <div id="map-show"
-        style="width: 100%; height: 300px; margin-top: 8px;"
-        data-markers="<%= @marker.to_json %>"
-        data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-        >
-      </div>
-
     </div>
 
-    <div class="col-4">
-      <div class="calendar">
-        <h5>Pick your dates:</h5>
-        <%= simple_form_for [@conveying, @booking], remote: true do |f| %>
-          <%= f.input :start_time, label: false, as: :string, required: false, input_html: {id: "range_start", class: "d-none"} %>
-          <%= f.input :end_time, as: :string, label: false, required: false, input_html: {id: "range_end", class: "d-none"} %>
-          <%= f.button :submit, "Book Conveying", :class => "btn btn-primary" %>
+    <!-- FIRST ROW in mokup -->
+    <div class="row">
+      <div class="col-sm-10 nopadding">
+        <p>Conveying from : <%= @conveying.start_location%></p>
+      </div>
+      <div class="d-flex col-sm-1">
+        <i class="fas fa-heart light-grey p-1"></i>
+        <p>Save</p>
+      </div>
+      <div class="d-flex col-sm-1 nopadding justify-content-end">
+        <i class="far fa-share-square light-grey p-1"></i>
+        <p>share</p>
+      </div>
+    </div>
+
+    <!--   SECOND ROW in mockup (conveying pictures) -->
+    <div class="row rounded boat-image-parent ">
+        <%= cl_image_tag @conveying.photos.first.key, class: "boat-image-child-one"%>
+        <%  @conveying.photos.each do |photo|%>
+          <%= cl_image_tag photo.key, class: "boat-image-child-two"%>
         <% end %>
+    </div>
+
+    <!--   THIRD ROW @ 2 cols in mockup (boat+owner info + map | calendar) -->
+    <div class="row mt-3">
+      <div class="col-8 pl-0">
+          <!-- <h2><%=  @conveying.boat_name %></h2> -->
+
+        <div class="border-bottom">
+  <!--    ATTENTION si on utilise current_user > on ne peut accéder à la show que quand on est log -->
+  <!--    <p style="font-size:12px;"><%#= current_user.first_name %> is the owner of this boat</p> -->
+          <h6><%= @conveying.user.first_name %> is the owner of this boat</h6>
+          <h6 style= "padding: 8px;"><%= @conveying.user.rating %> <i class="fas fa-star"></i></h6>
+        </div>
+
+        <div class="d-flex align-items-center">
+          <i class="fas fa-ship pr-3 mt-3" style="color:light-grey;"></i>
+          <p class="mb-0 mt-3"> <%=  @conveying.boat_type %></p>
+        </div>
+
+        <div class="d-flex align-items-center">
+          <i class="fas fa-map-marked-alt pr-3 mt-3" style="color:light-grey;"></i>
+          <p class="mb-0 mt-3"> From <%= @conveying.start_location %> | To <%= @conveying.arrival_location %></p>
+        </div>
+
+        <div class="d-flex align-items-center">
+          <i class="far fa-calendar-check pr-3 mt-3" style="color:light-grey;"></i>
+          <p class="mb-0 mt-3"> Conveying due on: <%= @conveying.arrival_date.strftime("%B %d, %Y") %></p> </div>
+
+        <div class="d-flex align-items-center">
+          <i class="fas fa-user-tie pr-3 mt-3" style="color:light-grey;"></i>
+          <p class="mb-0 mt-3"> Capacity : <%= @conveying.capacity %></p>
+        </div>
+
+        <div class="d-flex align-items-center border-bottom pb-3">
+          <i class="fas fa-money-bill-wave pr-3 mt-3" style="color:light-grey;"></i>
+          <p class="mb-0 mt-3"> Payment : <%= @conveying.price %>€</p>
+        </div>
+
+        <div id="map-show"
+          style="width: 100%; height: 300px; margin-top: 8px;"
+          data-markers="<%= @marker.to_json %>"
+          data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+          >
+        </div>
+
+      </div>
+
+      <div class="col-4">
+        <div class="calendar">
+          <h5>Pick your dates:</h5>
+          <%= simple_form_for [@conveying, @booking], remote: true do |f| %>
+            <%= f.input :start_time, label: false, as: :string, required: false, input_html: {id: "range_start", class: "d-none"} %>
+            <%= f.input :end_time, as: :string, label: false, required: false, input_html: {id: "range_end", class: "d-none"} %>
+            <%= f.button :submit, "Book Conveying", :class => "btn btn-primary" %>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
 </div>
 
 
-
-<%#= link_to 'delete conveying', conveying_path(@conveying), method: :delete, data: {confirm: "Are you sure ?"}  %>
+  <%#= link_to 'delete conveying', conveying_path(@conveying), method: :delete, data: {confirm: "Are you sure ?"}  %>
 
 
