--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -36,7 +36,7 @@
                     <h2><%= Booking.find(booking_id).user.first_name %> <%= Booking.find(booking_id).user.last_name %></h2>
                     <h2><%= Booking.find(booking_id).user.rating %> <i class="fas fa-star"></i></h2>
                   </div>
-                  <p>from <%= Booking.find(booking_id).start_time.strftime("%B %d, %Y") %> > <%= Booking.find(booking_id).start_time.strftime("%B %d, %Y") %></p>
+                  <p>from <%= Booking.find(booking_id).start_time.strftime("%B %d, %Y") %> > <%= Booking.find(booking_id).end_time.strftime("%B %d, %Y") %></p>
                   <div class="d-flex justify-content-end">
                     <%= link_to "Accept", booking_accept_path(booking_id), class: "btn btn-success btn-sm mr-3" %>
                     <%= link_to "Decline", booking_path(booking_id), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger btn-sm" %>
@@ -57,7 +57,7 @@
           <%= cl_image_tag conveying.photos.first.key, width: 300, height: 150 %>
           <div class="flex-grow-1 ml-3 my-3">
             <h4><%= conveying.start_location %> > <%= conveying.arrival_location %></h4>
-            <p><%= Booking.find(conveying.booking_ids[0]).start_time.strftime("%B %d, %Y") %> > <%= Booking.find(conveying.booking_ids[0]).start_time.strftime("%B %d, %Y") %></p>
+            <p><%= Booking.find(conveying.booking_ids[0]).start_time.strftime("%B %d, %Y") %> > <%= Booking.find(conveying.booking_ids[0]).end_time.strftime("%B %d, %Y") %></p>
           </div>
           <div class="d-block mr-3 align-items-center text-center" style="min-width: 150px;">
             <%= cl_image_tag Booking.find(conveying.booking_ids[0]).user.photo.key, width: 75, height: 75, class: "rounded-circle" %>
@@ -88,7 +88,7 @@
           <div class="flex-grow-1 ml-3 my-3">
             <h4><%= conveying.start_location %> > <%= conveying.arrival_location %></h4>
               <% if conveying.booked %>
-                <p><%= Booking.find(conveying.booking_ids[0]).start_time.strftime("%B %d, %Y") %> > <%= Booking.find(conveying.booking_ids[0]).start_time.strftime("%B %d, %Y") %></p>
+                <p><%= Booking.find(conveying.booking_ids[0]).start_time.strftime("%B %d, %Y") %> > <%= Booking.find(conveying.booking_ids[0]).end_time.strftime("%B %d, %Y") %></p>
               <% else %>
                 <p><%= conveying.start_date.strftime("%B %d, %Y") %> > <%= conveying.arrival_date.strftime("%B %d, %Y") %></p>
               <% end %>
