--- a/app/views/conveyings/new.html.erb
+++ b/app/views/conveyings/new.html.erb
@@ -1,3 +1,4 @@
+<div class="content-wrapper">
 <div class="container pt-5 col-6">
   <h1 class="text-center mb-5">Create a new conveying</h1>
 
@@ -36,4 +37,5 @@
     <%= image_tag "", width: 300, class: "hidden", id: "photo-preview" %>
     <%= f.button :submit, "Create", :class => "btn btn-primary w-100" %>
   <% end %>
+</div>
 </div>
