--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,3 +1,4 @@
+<div class="content-wrapper">
 <div class="container">
   <h1>My dashboard</h1>
 
@@ -23,7 +24,7 @@
           <% else %>
             <p class="badge badge-pill badge-primary p-2"><strong><%= pluralize conveying.booking_ids.count, 'request', plural: 'requests' %> pending</strong></p>
           <% end %>
-          
+
         </div>
 
         <div class="row">
@@ -50,7 +51,7 @@
     </div>
 
     <div class="tab-pane fade" id="my_conveyings" role="tabpanel" aria-labelledby="my_conveyings-tab">
-      
+
       <h3 class="mt-3">Upcoming</h3>
       <% @upcoming_conveyings.each do |conveying| %>
         <div class="conveying-card d-flex p my-3 border justify-content-between align-items-center rounded shadow">
@@ -64,7 +65,7 @@
             <p class="text-center"><%= Booking.find(conveying.booking_ids[0]).user.first_name %> <%= Booking.find(conveying.booking_ids[0]).user.last_name %></p>
             <p class="text-center"><span class="badge badge-pill badge-success">upcoming</span></p>
           </div>
-        </div> 
+        </div>
       <% end %>
 
       <h3 class="mt-3">Pending</h3>
@@ -106,4 +107,5 @@
       <% end %>
     </div>
   </div>
+</div>
 </div>
